--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.data.mongodb.uri=mongodb+srv://dungtd:Dung0478@cluster0.e8zbvyf.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=springify
+#spring.data.mongodb.database=springify
+spring.data.mongodb.database=MusicPlayer
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=15MB
 spring.output.ansi.enabled=ALWAYS
